production/common/js/bower/requirejs/tests/error/doubleRequire/b.js
define(["myShim"],function(){return{name:"b"}});